# champaign

./: .gitignore  CMakeLists.txt  README.md  run_paris.py  setup.py
app/: champaign.cpp
examples/: hepph_test.py
lib/: python_bindings.cpp
lib/algorithm/: champaign.h  leiden.h  paris.h
python_module/: CMakeLists.txt
